# mobile-screen-video-reader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
mobile_screen_video_reader/: __init__.py  app.py  cli.py
scripts/: mobile_screen_video_reader.py
tests/: test_mobile_screen_video_reader.py
