[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-screen-video-reader"
version = "0.1.1"
description = "Extract frames from mobile screen recordings for AI review"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/hk-882355/mobile-screen-video-reader"

[project.scripts]
mobile-screen-video-reader = "mobile_screen_video_reader.cli:main"

[tool.setuptools]
packages = ["mobile_screen_video_reader"]
